# medscribe

./: .dockerignore  .env.example  .env.prod.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  DESIGN_DECISIONS.md  Makefile  Prompt.txt  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
app/: __init__.py  cli.py  config.py  observability.py
app/api/: main.py
app/asr/: __init__.py  transcriber.py  wer.py
app/ingestion/: __init__.py  chunker.py  pipeline.py
app/llm/: __init__.py  client.py  extraction.py  rag.py
app/retrieval/: search.py
app/ui/: __init__.py  gradio_app.py
data/audio/references/: 01_de_hypertonie.txt  03_de_asthma.txt  05_en_followup.txt
data/audio/scripts/: 02_de_diabetes.txt  04_en_discharge.txt
data/corpus/: 01_de_hypertonie.md  02_de_diabetes_typ2.md  03_de_asthma_inhalation.md  04_de_antikoagulation.md  05_de_pneumonie.md  06_de_postoperative_wunde.md  07_de_herzinsuffizienz.md  08_en_chronic_kidney_disease.md  09_en_medication_reconciliation.md  10_en_sepsis_warning.md
data/notes/: note_1374_20260708_190916.txt
docker/: Dockerfile  nginx.conf
eval/: __init__.py  eval_asr.py  eval_retrieval.py  questions.yaml
eval/results/: asr_results.md  retrieval_results.md
k8s/: api-deployment.yaml  api-service.yaml  configmap.yaml  ingress.yaml  namespace.yaml  qdrant-statefulset.yaml  secret.example.yaml
scripts/: generate_certs.sh  load_test.py  start.sh
tests/: conftest.py  test_chunker.py  test_config.py  test_extraction.py  test_llm_client.py  test_rag.py  test_wer.py
